# DesignCode15

./: .gitignore  buildServer.json
.nvim/xcodebuild/: settings.json
DesignCode15/: AccountView.swift  ContentView.swift  DesignCode15App.swift  EmojiMemoryGame.swift  MemorizeView.swift  MemoryGame.swift  NOTES.md  PlayGround.swift  Style.swift  test.cpp  test.hpp
DesignCode15.xcodeproj/: project.pbxproj
DesignCode15.xcodeproj/xcshareddata/xcschemes/: DesignCode15.xcscheme
DesignCode15.xcodeproj/xcuserdata/hank.xcuserdatad/xcschemes/: xcschememanagement.plist
DesignCode15/Models/: MemoryGame.swift
DesignCode15/Styles/: Style.swift
DesignCode15/ViewModels/: EmojiMemoryGame.swift
DesignCode15/Views/: AccountView.swift  AspectVGrid.swift  CardView.swift  Cardify.swift  MemorizeView.swift  MyNaviView.swift  Pie.swift  TrivialViews.swift
DesignCode15Tests/: DesignCode15Tests.swift
DesignCode15UITests/: DesignCode15UITests.swift  DesignCode15UITestsLaunchTests.swift
sruft/: Cargo.toml  build.rs
sruft/bindings/: sruft.py  sruft.swift  sruftFFI.h  sruftFFI.modulemap
sruft/bindings/uniffi/sruft/: sruft.kt
sruft/src/: lib.rs  sruft.udl
